Make sure fullwidth table block is actually full width, on mobile and desktop. Fixes #2.

--- a/assets/stylesheets/blocks.css
+++ b/assets/stylesheets/blocks.css
@@ -165,6 +165,10 @@
 	display: table;
 }
 
+.wp-block-table.alignfull {
+	width: 96vw;
+}
+
 /* Preformatted */
 .wp-block-preformatted {}
 
